[gd_scene load_steps=27 format=2]

[ext_resource path="res://project/assets/Zombie1/animation/Jump3.png" type="Texture" id=1]
[ext_resource path="res://project/assets/Zombie1/animation/Run8.png" type="Texture" id=2]
[ext_resource path="res://project/assets/Zombie1/animation/Run6.png" type="Texture" id=3]
[ext_resource path="res://project/assets/Zombie1/animation/Jump4.png" type="Texture" id=4]
[ext_resource path="res://project/assets/Zombie1/animation/Walk2.png" type="Texture" id=5]
[ext_resource path="res://project/assets/Zombie1/animation/Jump5.png" type="Texture" id=6]
[ext_resource path="res://project/assets/Zombie1/animation/Jump6.png" type="Texture" id=7]
[ext_resource path="res://project/assets/Zombie1/animation/Walk4.png" type="Texture" id=8]
[ext_resource path="res://project/assets/Zombie1/animation/Jump2.png" type="Texture" id=12]
[ext_resource path="res://project/assets/Zombie1/animation/Run5.png" type="Texture" id=13]
[ext_resource path="res://project/assets/Zombie1/animation/Run10.png" type="Texture" id=14]
[ext_resource path="res://project/assets/Zombie1/animation/Walk5.png" type="Texture" id=15]
[ext_resource path="res://project/assets/Zombie1/animation/Walk6.png" type="Texture" id=16]
[ext_resource path="res://project/assets/Zombie1/animation/Run9.png" type="Texture" id=17]
[ext_resource path="res://project/assets/Zombie1/animation/Walk3.png" type="Texture" id=18]
[ext_resource path="res://project/assets/Zombie1/animation/Jump1.png" type="Texture" id=19]
[ext_resource path="res://project/assets/Zombie1/animation/Jump7.png" type="Texture" id=21]
[ext_resource path="res://project/assets/Zombie1/animation/Walk1.png" type="Texture" id=22]
[ext_resource path="res://project/assets/Zombie1/animation/Run7.png" type="Texture" id=23]
[ext_resource path="res://project/assets/Zombie1/animation/Idle3.png" type="Texture" id=24]
[ext_resource path="res://project/assets/Zombie1/animation/Idle4.png" type="Texture" id=25]
[ext_resource path="res://project/assets/Zombie1/animation/Idle1.png" type="Texture" id=26]
[ext_resource path="res://project/assets/Zombie1/animation/Idle2.png" type="Texture" id=27]
[ext_resource path="res://project/src/Player.gd" type="Script" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 21 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0
height = 102.0

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 28 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerCam" type="Camera2D" parent="."]
current = true
limit_left = -1
limit_top = -300
limit_right = 1
drag_margin_v_enabled = true
drag_margin_top = 0.75
drag_margin_bottom = 1.0
editor_draw_drag_margin = true

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 2

[node name="PlayerAreaShape" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource( 2 )
[connection signal="body_shape_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_shape_entered"]
